# BurningTool

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Contribution.md  PreLoad.cmake  README.md  run.sh  vcpkg.json
.github/workflows/: build.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
docs/: README.md
gui/: CMakeLists.txt  CMakeLists.txt.user.win32  MainWindow.cpp  MainWindow.h  PreLoad.cmake  main.cpp  qt_zh_CN.ts  test-list.cpp  win-install.cmake
gui/resources/: main.qrc  main.rc
gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  config.h.in  main.cpp  main.h  qt_zh_CN.ts  version.cpp
gui/src/common/: AppGlobalSetting.cpp  AppGlobalSetting.h  BuringProcess.cpp  BuringProcess.h  BuringRequest.cpp  BuringRequest.h  BurnLibrary.cpp  BurnLibrary.h  BurningProcess.cpp  BurningProcess.h  BurningRequest.cpp  BurningRequest.h  EventStack.cpp  EventStack.h  K510BurningProcess.cpp  K510BurningProcess.h  MyException.h  SettingsHelper.cpp  SettingsHelper.h  UpdateChecker.cpp  UpdateChecker.h  logger.cpp  logger.h
gui/src/widgets/: AnimatedButton.cpp  AnimatedButton.h  BuringControlWindow.cpp  BuringControlWindow.h  BuringControlWindow.ui  BurningControlWindow.cpp  BurningControlWindow.h  BurningControlWindow.ui  DebugWindow.cpp  DebugWindow.h  DebugWindow.ui  LoggerWindow.cpp  LoggerWindow.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  SingleBurnWindow.cpp  SingleBurnWindow.h  SingleBurnWindow.ui  StateMessage.cpp  StateMessage.h
scripts/: build.ps1  create-icon.sh  format-all.ps1  format-all.sh  make-release.ps1  tidy-all.ps1
test-binary/: CMakeLists.txt
test-binary/src/: main.cpp  main.h  test1.udev.list.linux.cpp  test1.udev.list.linux.cppbak
